Reverted previous changes about padding, issue was that when a page is not full of content the padding got misaligned with the navbar and the padding could be seen, but adding fixed-bottom to the navbar padding caused it to overlap with content, fix was making navbar padding transparent

--- a/frontend/src/components/navbar.css
+++ b/frontend/src/components/navbar.css
@@ -12,5 +12,4 @@
 
 .navbarPadding {
     padding-top: 124px;
-    background-color: rgb(255,255,255);
 }
